# my_spider

./: README.md  main.py  my_http.py  pyproject.toml  response.py  selector.py  spider.py
controller/: _controller.py
crawl/: __init__.py  __main__.py
